Bug 238706 -- the guess-from-ext should never be exposed to the outside world. r=biesi, sr=darin, a=chofmann